[refactor] : 페이징처리 리팩토링